--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@zeit/next-css": "1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "1.0.1",
-    "bootstrap": "4.6.0",
+    "bootstrap": "^4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "file-loader": "^6.2.0",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
     "less": "^2.7.3",
     "moment": "2.29.1",
@@ -41,12 +42,13 @@
     "nouislider": "14.6.4",
     "path": "0.12.7",
     "rc-drawer": "^4.3.1",
-    "react": "17.0.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-datetime": "3.0.4",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
